# pumpswap-auto-trader

./: README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: __init__.py  health.py  stats.py  tokens.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: token.py
backend/app/services/: scheduler.py  ta.py
frontend/: package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  Home.tsx  Tokens.tsx
frontend/src/services/: api.ts
